--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -1,60 +1,95 @@
 <div>
-    <h1>What Are Caves &amp; Karsts&#63;<br/><small>The structure of aquifers</small></h1>
-    <div class="centered">
-        <!-- <d3-geojson class="d3map"></d3-geojson> -->
-    </div>
+    <!-- <h1>What Are Caves &amp; Karsts&#63;<br/><small>The structure of aquifers</small></h1> -->
+    <!-- <div class="centered">
+        <d3-geojson class="d3map"></d3-geojson>
+    </div> -->
 
     <!-- START PARALLAX TEST -->
-    
-    <!-- <ul class="navigation">
-		<li data-slide="1">Slide 1</li>
-		<li data-slide="2">Slide 2</li>
-		<li data-slide="3">Slide 3</li>
-		<li data-slide="4">Slide 4</li>
-	</ul> -->
+    <!-- 
+    <ul class="navigation-scroll">
+		<li class="navigation-scroll-li" data-slide="0">Seco Sinkhole</li>
+		<li class="navigation-scroll-li" data-slide="1">Video</li>
+		<li class="navigation-scroll-li" data-slide="2">Aquifer Map</li>
+		<li class="navigation-scroll-li" data-slide="3">Video</li>
+		<li class="navigation-scroll-li" data-slide="4">Limestone</li>
+		<li class="navigation-scroll-li" data-slide="5">Video</li>
+		<li class="navigation-scroll-li" data-slide="6">Descent</li>
+		<li class="navigation-scroll-li" data-slide="7">Watertable</li>
+	</ul>
+	 -->
+	<!-- <img class="eaalogo" src="assets/images/eaa-logo-color.png"> -->
 
-	<!-- <img class="supermanlogo" src="assets/images/superman.png"> -->
+	<!-- Title -->
+	<div class="slide" id="slide0" data-slide="0" data-stellar-background-ratio="0.5">
+		<span class="slideno">Seco Sinkhole</span>                        
+	    <a class="button-scroll" data-slide="1" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">The Edwards Aquifer — one of the most prolific karst aquifers in the United States — is located right here in south central Texas.  Come on in and discover the features that make this aquifer one of the most porous and permeable aquifers around.</p>
+		</div>     
+	</div>
 
 	<!-- Slide 1 -->
-	<!-- <div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		<span class="slideno">Slide 1</span>                        
-	    <a class="button" data-slide="2" title=""></a>      
-	</div> -->
+	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
+		<span class="slideno">Video: Waterflow</span>                        
+	    <a class="button-scroll" data-slide="2" title=""></a> 
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">Over millions of years water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>
+		</div>      
+	</div>
 
 	<!-- Slide 2 -->
-	<!-- <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
-		<span class="slideno">Slide 2</span>                        
-	    <a class="button" data-slide="3" title=""></a>
+	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
+		<span class="slideno">Aquifer Map</span>                        
+	    <a class="button-scroll" data-slide="3" title=""></a>
 	    <div class="wrapper">
-            <img src="assets/images/bagley.jpg" data-stellar-ratio="1.0" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/raven.jpg" data-stellar-ratio="1.3" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/ridge.jpg" data-stellar-ratio="1.6" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/bed.jpg" data-stellar-ratio="1.9" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/tree.jpg" data-stellar-ratio="2.2" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/NatureArt.gif" data-stellar-ratio="2.5" data-stellar-vertical-offset="0"alt="">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.</p>
 		</div>     
-	</div> -->
+	</div>
 
 	<!-- Slide 3 -->
-	<!-- <div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
-		<span class="slideno">Slide 3</span>                        
-	    <a class="button" data-slide="4" title=""></a>   
+	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
+		<span class="slideno">Video: Drainage</span>                        
+	    <a class="button-scroll" data-slide="4" title=""></a>   
 	    <div class="wrapper">
-            <img src="assets/images/bagley.jpg" data-stellar-ratio="1.0" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/raven.jpg" data-stellar-ratio="1.3" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/ridge.jpg" data-stellar-ratio="1.6" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/bed.jpg" data-stellar-ratio="1.9" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/tree.jpg" data-stellar-ratio="2.2" data-stellar-vertical-offset="0"alt="">
-            <img src="assets/images/NatureArt.gif" data-stellar-ratio="2.5" data-stellar-vertical-offset="0"alt="">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
 		</div>   
-	</div> -->
+	</div>
 
 	<!-- Slide 4 -->
-	<!-- <div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0.5">
-		<span class="slideno">Slide 4</span>                        
-	    <a class="button" data-slide="1" title=""></a>      
-	</div> -->
+	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0.5">
+		<span class="slideno">Limestone</span>                        
+	    <a class="button-scroll" data-slide="5" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">As the rainwater mixes with organic compounds in the soil, it forms a diluted weak acid called carbonic acid.  Over millions of years this acid has dissolved out some of the calcite minerals that make up the Edwards Aquifer, leaving interconnected pores and cavities, and in some cases large cave systems.</p>
+		</div>     
+	</div>
+
+	<!-- Slide 5 -->
+	<div class="slide" id="slide5" data-slide="5" data-stellar-background-ratio="0.5">
+		<span class="slideno">Video: Sinkhole Entrance</span>                        
+	    <a class="button-scroll" data-slide="6" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
+		</div>   
+	</div>
+
+	<!-- Slide 6 -->
+	<div class="slide" id="slide6" data-slide="6" data-stellar-background-ratio="0.5">
+		<span class="slideno">Descent</span>                        
+	    <a class="button-scroll" data-slide="7" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
+		</div>  
+	</div>
+
+	<!-- Slide 7 -->
+	<div class="slide" id="slide7" data-slide="7" data-stellar-background-ratio="0.5">
+		<span class="slideno">Watertable</span>                        
+	    <a class="button-scroll" id="reverse" data-slide="0" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.4" data-stellar-vertical-offset="0" alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
+		</div> 
+	</div>
 
 	<!-- END PARALLAX TEST -->
-
 </div>
