Integated parallax scrolling into aquiferium framework. Seems to be working though layout does not adapt to all screen sizes perfectly yet. Investigate intermittent bug in image background positioning and scroll animation if it persists.

--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -1,25 +1,9 @@
 <div>
     <!-- <h1>What Are Caves &amp; Karsts&#63;<br/><small>The structure of aquifers</small></h1> -->
-    <!-- <div class="centered">
-        <d3-geojson class="d3map"></d3-geojson>
-    </div> -->
 
-    <!-- START PARALLAX TEST -->
-    <!-- 
-    <ul class="navigation-scroll">
-		<li class="navigation-scroll-li" data-slide="0">Seco Sinkhole</li>
-		<li class="navigation-scroll-li" data-slide="1">Video</li>
-		<li class="navigation-scroll-li" data-slide="2">Aquifer Map</li>
-		<li class="navigation-scroll-li" data-slide="3">Video</li>
-		<li class="navigation-scroll-li" data-slide="4">Limestone</li>
-		<li class="navigation-scroll-li" data-slide="5">Video</li>
-		<li class="navigation-scroll-li" data-slide="6">Descent</li>
-		<li class="navigation-scroll-li" data-slide="7">Watertable</li>
-	</ul>
-	 -->
-	<!-- <img class="eaalogo" src="assets/images/eaa-logo-color.png"> -->
+    <!-- START PARALLAX -->
 
-	<!-- Title -->
+	<!-- Slide 0 -->
 	<div class="slide" id="slide0" data-slide="0" data-stellar-background-ratio="0.5">
 		<span class="slideno">Seco Sinkhole</span>                        
 	    <a class="button-scroll" data-slide="1" title=""></a>
@@ -91,5 +75,5 @@
 		</div> 
 	</div>
 
-	<!-- END PARALLAX TEST -->
+	<!-- END PARALLAX -->
 </div>
