--- a/app/styles/parallax.css
+++ b/app/styles/parallax.css
@@ -1,45 +1,3 @@
-/* navigation */
-/*
- .navigation-scroll {
-    position: fixed;
-    z-index: 1;
-    top: 3em;
-    left: 1em;
-}
-.navigation-scroll-li {
-    color: #fff;
-    display: block;
-    padding: 0 10px;
-    line-height: 30px;
-    margin-bottom: 2px;
-    -webkit-transition: all .2s ease-in-out;
-    text-align: left;
-    width: 6em;
-}
-.navigation-scroll-li:hover, .navigation-scroll-li-active {
-    font-size: 2.5em;
-    cursor:pointer;
-    width:6em!important;
-}
-*/
-/* eaa logo */
-/*
- .eaalogo {
-    position:fixed;
-    top: 1em;
-    right: 1em;
-    max-width: 200px;
-    z-index: 10;
-    width: 30em;
-    padding: 1em;
-    background-color: #fff;
-    box-shadow: 
-   -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;
-}
-*/
 /* slides */
  .slide {
     background-attachment: fixed;
@@ -50,9 +8,10 @@
 }
 .wrapper {
     width: 100%; /*960px;*/
-    height: 700px; /*200px;*/
-    margin:0 auto;
-    position:relative;
+    min-width: 100%;
+    height: 900px; /*200px;*/
+    margin: 0 auto;
+    position: relative;
 }
 .slideno {
     position: absolute;
@@ -101,8 +60,9 @@
 }
 /* individual slides */
 /******************************
- TITLE 
+ SECO SINNKHOLE
 *******************************/
+/*** SLIDE 0 ***/
  #slide0 {
     background-image:url(../images/caves-karsts/DSC_0318.png);
     -webkit-background-size: cover;
@@ -111,20 +71,11 @@
     background-size: cover;
     position: relative;
 }
-#slide0 .parallaxbg {
-    /*position: relative;*/
-    /*right: 0px;*/
-    /*top: -50px;*/
-    /*font-size: 28px;*/
-    /*color: rgba(51, 51, 51, 0.3);*/
-}
 #slide0 p:first-child {
     position: absolute;
     border: 1px solid #8F8100;
-    margin-top: 20%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -132,25 +83,20 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 1 
-*******************************/
+/*** SLIDE 1 ***/
  #slide1 {
     /*background-image:url(../images/caves-karsts/Seco chnl3 7-25-07.MPG);*/
+    background-color: #222;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-#slide1 .parallaxbg {
-}
 #slide1 p:first-child {
     position: absolute;
     border: 1px solid #85A2B4;
-    margin-top: 40%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -158,9 +104,7 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 2 
-*******************************/
+/*** SLIDE 2 ***/
  #slide2 {
     background-image:url(../images/caves-karsts/For-Doty1_940x714.png);
     -webkit-background-size: cover;
@@ -168,15 +112,11 @@
     -o-background-size: cover;
     background-size: cover;
 }
-#slide2 .parallaxbg {
-}
 #slide2 p:first-child {
     position:absolute;
     border: 1px solid #8F8100;
-    margin-top: 20%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -184,25 +124,20 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 3 
- *******************************/
+/*** SLIDE 3 ***/
  #slide3 {
     /*background-image:url(../images/caves-karsts/MVI_3085.MOV);*/
+    background-color: #222;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-#slide3 .parallaxbg {
-}
 #slide3 p:first-child {
     position:absolute;
     border: 1px solid #85A2B4;
-    margin-top: 40%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -210,9 +145,7 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 4 
-*******************************/
+/*** SLIDE 4 ***/
  #slide4 {
     background-image:url(../images/caves-karsts/edwards-limestone.jpg);
     -webkit-background-size: cover;
@@ -220,15 +153,11 @@
     -o-background-size: cover;
     background-size: cover;
 }
-#slide4 .parallaxbg {
-}
 #slide4 p:first-child {
     position:absolute;
     border: 1px solid #8F8100;
-    margin-top: 20%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -236,25 +165,20 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 5
-*******************************/
+/*** SLIDE 5 ***/
  #slide5 {
     /*background-image:url(../images/caves-karsts/MVI_3004.MOV);*/
+    background-color: #222;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-#slide5 .parallaxbg {
-}
 #slide5 p:first-child {
     position:absolute;
     border: 1px solid #85A2B4;
-    margin-top: 40%;
-    left: 20%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -262,9 +186,7 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 6
-*******************************/
+/*** SLIDE 6 ***/
  #slide6 {
     background-image:url(../images/caves-karsts/valdina_8r.jpg);
     -webkit-background-size: cover;
@@ -272,15 +194,11 @@
     -o-background-size: cover;
     background-size: cover;
 }
-#slide6 .parallaxbg {
-}
 #slide6 p:first-child {
     position:absolute;
     border: 1px solid #AB650D;
-    margin-top: 20%;
-    left: 24%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 4%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
@@ -288,9 +206,7 @@
     font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
     width: 30em;
 }
-/******************************
- SLIDE 7
-*******************************/
+/*** SLIDE 7 ***/
  #slide7 {
     background-image:url(../images/caves-karsts/Valdina_Farms_Cave_IMG0017.png);
     -webkit-background-size: cover;
@@ -298,15 +214,11 @@
     -o-background-size: cover;
     background-size: cover;
 }
-#slide7 .parallaxbg {
-}
 #slide7 p:first-child {
     position:absolute;
     border: 1px solid #AB650D;
-    margin-top: 55%;
-    left: 40%;
-    /*top: 50%;*/ /*-40em;*/
-    /*right: 0%;*/  /*-28.5em;*/
+    margin-top: 2%;
+    left: 2%;
     padding: 1em;
     color: #fff;
     background-color: #111;
