Updated the css for the parallax effecrt and improvements to overall responsiveness.

--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,3 +1,7 @@
-<div>
+<div class="conservation">
+<!-- <div id="parallaxwrapper"> -->
+<!-- <div id="parallaxcontent"> -->
     <h1>Aquifer Conservation<br/><small>The stewardship of aquifers</small></h1>
+<!-- </div> -->
+<!-- </div> -->
 </div>
