--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -1,4 +1,7 @@
-<div>
+<div class="springs">
+<!-- <div id="parallaxwrapper"> -->
+<!-- <div id="parallaxcontent"> -->
     <h1>How Do Aquifers Recharge&#63;<br/><small>The replenishing of aquifers</small></h1>
+<!-- </div> -->
+<!-- </div> -->
 </div>
-
