--- a/app/styles/aquiferium-base.css
+++ b/app/styles/aquiferium-base.css
@@ -64,6 +64,8 @@
 *   Typography:
 *       - Forced justified is the preferred usage for body copy.
 *       - Bulleted text is aligned left.
+*
+*   Fonts being used: Helvetica, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
 */
 
 /*****************/
@@ -72,15 +74,13 @@
 html {
     max-width: 100%;
     max-height: 100%;
-    font-size: 14px;
 }
 body {
     overflow-x: hidden;
-    /*min-width: 680px;*/
+    overflow-y: scroll;
+    min-width: 640px;
     min-height: 100%;
-    padding-top: 3.5em;
-    padding-bottom: 4em;
-    font: 100% Helvetica, Arial, Georgia, 'Times New Roman', 'Trebuchet MS', Verdana, Arial, sans-serif;
+    font: 100% 'Trebuchet MS', Georgia, Helvetica, 'Times New Roman', Verdana, Arial, sans-serif; 
     text-rendering: optimizeLegibility;
     background-color: #000; /* #425968; #85A2B4; #E6D395; #E8F5FB; #fff;*/
     color: #fff;
@@ -132,20 +132,32 @@ a:hover, a:visited, a:link, a:active
 a:hover {
     color: #fff; 
 }
+.content-container {
+    padding-left: 1%;
+}
 .eaa-logo {
     min-width: 80px;
     max-width: 10%;
-    margin-top: 0.5em;
+    margin-top: 0.3em;
     margin-left: 0.5em;
     margin-right: 1em;
+    margin-bottom: 0.3em;
 }
 .no-Ibar {
     cursor:default;
 }
+.apptitle {
+    position: absolute;
+    top: 5%;
+    font-weight: bold;
+    font-size: 30px;
+    color: #000;    
+}
 .footer {
-    padding: 1em 0em 0em 0em;
-    background-color: #333;
-    border: none;
+    background-color: #111;
+    border-top: 1px solid #333;
+    font-size: 0.8em;
+    padding-top: 0.8em;
 }
 .centered {
     text-align: center;
@@ -167,43 +179,228 @@ a:hover {
     z-index: 5000;
     background-color: #000;
 }
+/********************
+*  PARALLAX EFFECT  *
+********************/
+/* slides */
+.wrapper {
+    width: 100%; /*960px;*/
+    min-width: 100%;
+    height: 900px; /*200px;*/
+    margin: 0 auto;
+    position: relative;
+}
+ .slide {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;    
+    box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.3);
+}
+.slide p:first-child {
+    position: absolute;
+    border: 1px solid #fff;
+    top: 13%; /*80px;*/
+    left: 12%; /*80px;*/
+    width: 66%;
+    padding: 0.4em 0.8em;
+    color: #fff;
+    background-color: #111;
+    box-shadow: 0 0 1em #000;
+    font-size: 0.8em;
+}
+.slideno {
+    position: absolute;
+    top: 5%; /*6px;*/
+    left: 4%; /*20px;*/
+    font-size: 80px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 1);
+    text-shadow:
+        -1px -1px 0 #eee,  
+        1px -1px 0 #eee,
+        -1px 1px 0 #eee,
+        1px 1px 0 #eee;
+}
+/* buttons */
+ .button-scroll {
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 15%; /*100px;*/
+    left: 5%; /*22px;*/
+    background-image: url(../images/arrow.png);
+    background-repeat: no-repeat;
+    z-index: 10;
+}
+.button-scroll:hover {
+    background-image:url(../images/arrow-invert.png);
+    background-repeat:no-repeat;
+    cursor:pointer;
+}
+#reverse {
+    behavior:url(-ms-transform.htc);
+    /* Firefox */
+    -moz-transform:rotate(180deg);
+    /* Safari and Chrome */
+    -webkit-transform:rotate(180deg);
+    /* Opera */
+    -o-transform:rotate(180deg);
+    /* IE9 */
+    -ms-transform:rotate(180deg);
+    /* IE6,IE7 */
+    /*filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476);*/
+    /* IE8 */
+    /*-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)"; */
+}
+/* individual slides */
+/******************************
+ SECO SINNKHOLE
+*******************************/
+/*** SLIDE 0 ***/
+ #slide0 {
+    background-image: url(../images/caves-karsts/DSC_0318_web.jpg);
+}
+#slide0 p:first-child {
+    border: 1px solid #8F8100;
+}
+/*#slideno0 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #8F8100,  
+    1px -1px 0 #8F8100,
+    -1px 1px 0 #8F8100,
+    1px 1px 0 #8F8100;
+}*/
+/*** SLIDE 1 ***/
+ #slide1 {
+    /*background-image:url(../images/caves-karsts/Seco chnl3 7-25-07.MPG);*/
+    background-color: #222;
+}
+#slide1 p:first-child {
+    border: 1px solid #425968;
+}
+/*#slideno1 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #425968,  
+    1px -1px 0 #425968,
+    -1px 1px 0 #425968,
+    1px 1px 0 #425968;
+}*/
+/*** SLIDE 2 ***/
+ #slide2 {
+    background-image:url(../images/caves-karsts/For-Doty1_940x714_web.jpg);
+}
+#slide2 p:first-child {
+    border: 1px solid #8F8100;
+}
+/*#slideno2 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #8F8100,  
+    1px -1px 0 #8F8100,
+    -1px 1px 0 #8F8100,
+    1px 1px 0 #8F8100;
+}*/
+/*** SLIDE 3 ***/
+ #slide3 {
+    /*background-image:url(../images/caves-karsts/MVI_3085.MOV);*/
+    background-color: #222;
+}
+#slide3 p:first-child {
+    border: 1px solid #425968;
+}
+/*#slideno3 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #425968,  
+    1px -1px 0 #425968,
+    -1px 1px 0 #425968,
+    1px 1px 0 #425968;
+}*/
+/*** SLIDE 4 ***/
+ #slide4 {
+    background-image:url(../images/caves-karsts/edwards-limestone_web.jpg);
+}
+#slide4 p:first-child {
+    border: 1px solid #8F8100;
+}
+/*#slideno4 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #8F8100,  
+    1px -1px 0 #8F8100,
+    -1px 1px 0 #8F8100,
+    1px 1px 0 #8F8100;
+}*/
+/*** SLIDE 5 ***/
+ #slide5 {
+    /*background-image:url(../images/caves-karsts/MVI_3004.MOV);*/
+    background-color: #222;
+}
+#slide5 p:first-child {
+    border: 1px solid #425968;
+}
+/*#slideno5 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #425968,  
+    1px -1px 0 #425968,
+    -1px 1px 0 #425968,
+    1px 1px 0 #425968;
+}*/
+/*** SLIDE 6 ***/
+ #slide6 {
+    background-image:url(../images/caves-karsts/valdina_8r_web.jpg);
+}
+#slide6 p:first-child {
+    border: 1px solid #8F8100;
+}
+/*#slideno6 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #8F8100,  
+    1px -1px 0 #8F8100,
+    -1px 1px 0 #8F8100,
+    1px 1px 0 #8F8100;
+}*/
+/*** SLIDE 7 ***/
+ #slide7 {
+    background-image:url(../images/caves-karsts/Valdina_Farms_Cave_IMG0017_web.jpg);
+}
+#slide7 p:first-child {
+    border: 1px solid #AB650D;
+}
+/*#slideno7 {
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #AB650D,  
+    1px -1px 0 #AB650D,
+    -1px 1px 0 #AB650D,
+    1px 1px 0 #AB650D;
+}*/
+/*** SLIDE 8 ***/
+ #slide8 {
+    background-color: #000;
+}
 /*****************/
 /* MEDIA QUERIES */
 /*****************/
-/* Dealing with Bootstrap on tiny screens */
-@media (max-width: 209px) {
-    .test-media-queries p span:after {         
-        color: #FF0000;
-        content: 'Micro Screen (max-width <= 209px)';
-    }
-    html { font-size: 10px; }
-    body { padding-top: 9.5em; }
-}
-@media (min-width: 210px) and (max-width: 310px) {
-    .test-media-queries p span:after {         
-        color: #FF5500;
-        content: 'Tiny Screen (min-width = 210px && max-width = 310px)';
-    }
-    html { font-size: 12px; }
-    body { padding-top: 6.5em; }
-}
-/* Extra small devices (phones, less than 768px) */
-@media (min-width: 311px) and (max-width: 767px) {
-    .test-media-queries p span:after {         
-        color: #FFAA00;
-        content: 'Small Screen (min-width = 311px && max-width < 767px)';
-    }
-    html { font-size: 14px; }
-    body { padding-top: 3.5em; }
-}
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991px) {
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
     .test-media-queries p span:after { 
-        color: #FFFF00;
-        content: 'Tablet Screen (min-width = 768px && max-width < 991px)';
+        color: #00AAFF;
+        content: 'Large Screen (min-width >= 1200px)';
     }
-    html { font-size: 16px; }
-    body { padding-top: 6.0em; }
+    html { font-size: 20px; }
+    body { padding-top: 2.6em; }
 }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -214,12 +411,51 @@ a:hover {
     html { font-size: 18px; }
     body { padding-top: 5.6em; }
 }
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991px) {
     .test-media-queries p span:after { 
-        color: #00AAFF;
-        content: 'Large Screen (min-width >= 1200px)';
+        color: #FFFF00;
+        content: 'Tablet Screen (min-width = 768px && max-width < 991px)';
     }
-    html { font-size: 18px; }
-    body { padding-top: 2.6em; }
+    html { font-size: 16px; }
+    body { padding-top: 6.0em; }
+}
+/* Extra small devices (phones, less than 768px) */
+@media (min-width: 311px) and (max-width: 767px) {
+    .test-media-queries p span:after {         
+        color: #FFAA00;
+        content: 'Small Screen (min-width = 311px && max-width < 767px)';
+    }
+    html { font-size: 14px; }
+    body { padding-top: 3.5em; }
+    .apptitle {
+        font-size: 24px;
+        top: 20%;
+    }
+}
+/* Dealing with Bootstrap on tiny screens */
+@media (min-width: 210px) and (max-width: 310px) {
+    .test-media-queries p span:after {         
+        color: #FF5500;
+        content: 'Tiny Screen (min-width = 210px && max-width = 310px)';
+    }
+    html { font-size: 12px; }
+    body { padding-top: 6.5em; }
+    .apptitle {
+        font-size: 18px;
+        top: 12%;
+    }
+}
+/* Dealing with Bootstrap on micro screens */
+@media (min-width: 80px) and (max-width: 209px) {
+    .test-media-queries p span:after {         
+        color: #FF0000;
+        content: 'Micro Screen (max-width <= 209px)';
+    }
+    html { font-size: 10px; }
+    body { padding-top: 9.5em; }
+    .apptitle {
+        font-size: 16px;
+        top: 4%;
+    }
 }
