--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,3 +1,5 @@
-<div>
-    <h1>What Is The Aquiferium&#63;<br/><small>The story behind the aquiferium project</small></h1>
+<div class="container">
+	<div class="about">
+	    <h1>What Is The Aquiferium&#63;<br/><small>The story behind the aquiferium project</small></h1>
+	</div>
 </div>
