Updated bower components to support more recent versions of angular. Still integrating SASS and compass to attempt bypass of revved CSS image path issue during grunt build.

--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -38,7 +38,10 @@
 	    <a class="button-scroll" data-slide="4" title=""></a>
 	    <div class="wrapper">
             <p data-stellar-ratio="1.5" alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
-		</div>   
+		</div>
+		<!-- <div class="centered">
+	        <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson>
+	    </div> -->
 	</div>
 
 	<!-- Slide 4 -->
