--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -1,12 +1,9 @@
 <div class="caveskarsts">
-<!-- <div id="parallaxwrapper"> -->
-<!-- <div id="parallaxcontent"> -->
-
     <!-- <h1>What Are Caves &amp; Karsts&#63;<br/><small>The structure of aquifers</small></h1> -->
 
     <!-- START PARALLAX -->
 	<!-- Slide 0 -->
-	<div class="slide" id="slide0" data-slide="0" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide0" data-slide="0" data-stellar-background-ratio="0.5">
 		<span class="slideno">Seco Sinkhole</span>   <!-- id="slideno0" -->
 	    <a class="button-scroll" data-slide="1" title=""></a>
 	    <div class="wrapper">
@@ -15,7 +12,7 @@
 	</div>
 
 	<!-- Slide 1 -->
-	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide1" data-slide="1" data-stellar-background-ratio="0.5">
 		<span class="slideno">Waterflow</span>     <!-- id="slideno1" -->
 	    <a class="button-scroll" data-slide="2" title=""></a>
 	    <div class="wrapper">
@@ -24,7 +21,7 @@
 	</div>
 
 	<!-- Slide 2 -->
-	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide2" data-slide="2" data-stellar-background-ratio="0.5">
 		<span class="slideno">Location</span>      <!-- id="slideno2" -->
 	    <a class="button-scroll" data-slide="3" title=""></a>
 	    <div class="wrapper">
@@ -33,19 +30,16 @@
 	</div>
 
 	<!-- Slide 3 -->
-	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide3" data-slide="3" data-stellar-background-ratio="0.5">
 		<span class="slideno">Drainage</span>     <!-- id="slideno3" -->
 	    <a class="button-scroll" data-slide="4" title=""></a>
 	    <div class="wrapper">
             <p data-stellar-ratio="1.5" alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
 		</div>
-		<!-- <div class="centered">
-	        <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson>
-	    </div> -->
 	</div>
 
 	<!-- Slide 4 -->
-	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide4" data-slide="4" data-stellar-background-ratio="0.5">
 		<span class="slideno">Limestone</span>    <!--  id="slideno4"  -->                   
 	    <a class="button-scroll" data-slide="5" title=""></a>
 	    <div class="wrapper">
@@ -54,7 +48,7 @@
 	</div>
 
 	<!-- Slide 5 -->
-	<div class="slide" id="slide5" data-slide="5" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide5" data-slide="5" data-stellar-background-ratio="0.5">
 		<span class="slideno">Sinkhole</span>      <!-- id="slideno5"    --> 
 	    <a class="button-scroll" data-slide="6" title=""></a>
 	    <div class="wrapper">
@@ -63,7 +57,7 @@
 	</div>
 
 	<!-- Slide 6 -->
-	<div class="slide" id="slide6" data-slide="6" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide6" data-slide="6" data-stellar-background-ratio="0.5">
 		<span class="slideno">Descent</span>           <!-- id="slideno6"  -->             
 	    <a class="button-scroll" data-slide="7" title=""></a>
 	    <div class="wrapper">
@@ -72,7 +66,7 @@
 	</div>
 
 	<!-- Slide 7 -->
-	<div class="slide" id="slide7" data-slide="7" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide7" data-slide="7" data-stellar-background-ratio="0.5">
 		<span class="slideno">Watertable</span>     <!-- id="slideno7" -->                   
 	    <a class="button-scroll" id="reverse" data-slide="0" title=""></a>
 	    <div class="wrapper">
@@ -81,13 +75,10 @@
 	</div>
 
 	<!-- Slide 8 -->
-	<div class="slide" id="slide8" data-slide="8" data-stellar-background-ratio="0.5">
+	<div class="slide" id="ck-slide8" data-slide="8" data-stellar-background-ratio="0.5">
 		<span class="slideno">End</span>                  
 	    <div class="wrapper">
 		</div> 
 	</div>
 	<!-- END PARALLAX -->
-
-<!-- </div> -->
-<!-- </div> -->
 </div>
