--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,7 +1,85 @@
 <div class="conservation">
-<!-- <div id="parallaxwrapper"> -->
-<!-- <div id="parallaxcontent"> -->
-    <h1>Aquifer Conservation<br/><small>The stewardship of aquifers</small></h1>
-<!-- </div> -->
-<!-- </div> -->
+    <!-- START PARALLAX -->
+	<!-- Slide 0 -->
+	<div class="slide" id="cons-slide0" data-slide="0" data-stellar-background-ratio="0.5">
+		<span class="slideno">Aquifer Conservation</span>   <!-- id="slideno0" -->
+	    <a class="button-scroll" data-slide="1" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">The stewardship of aquifers</p>
+        </div>     
+	</div>
+
+	<!-- Slide 1 -->
+	<div class="slide" id="cons-slide1" data-slide="1" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 1</span>     <!-- id="slideno1" -->
+	    <a class="button-scroll" data-slide="2" title=""></a>
+	    <div class="wrapper">
+            <!-- <p data-stellar-ratio="1.5" alt=""></p> -->
+            <div class="centered">
+                <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson>
+            </div>
+        </div>      
+	</div>
+
+	<!-- Slide 2 -->
+	<div class="slide" id="cons-slide2" data-slide="2" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 2</span>      <!-- id="slideno2" -->
+	    <a class="button-scroll" data-slide="3" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div>    
+	</div>
+
+	<!-- Slide 3 -->
+	<div class="slide" id="cons-slide3" data-slide="3" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 3</span>     <!-- id="slideno3" -->
+	    <a class="button-scroll" data-slide="4" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div>
+	</div>
+
+	<!-- Slide 4 -->
+	<div class="slide" id="cons-slide4" data-slide="4" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 4</span>    <!--  id="slideno4"  -->                   
+	    <a class="button-scroll" data-slide="5" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div>   
+	</div>
+
+	<!-- Slide 5 -->
+	<div class="slide" id="cons-slide5" data-slide="5" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 5</span>      <!-- id="slideno5"    --> 
+	    <a class="button-scroll" data-slide="6" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div> 
+	</div>
+
+	<!-- Slide 6 -->
+	<div class="slide" id="cons-slide6" data-slide="6" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 6</span>           <!-- id="slideno6"  -->             
+	    <a class="button-scroll" data-slide="7" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div> 
+	</div>
+
+	<!-- Slide 7 -->
+	<div class="slide" id="cons-slide7" data-slide="7" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 7</span>     <!-- id="slideno7" -->                   
+	    <a class="button-scroll" id="reverse" data-slide="0" title=""></a>
+	    <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+        </div>
+	</div>
+
+	<!-- Slide 8 -->
+	<div class="slide" id="cons-slide8" data-slide="8" data-stellar-background-ratio="0.5">
+		<span class="slideno">Slide 8</span>                  
+	    <div class="wrapper">
+		</div> 
+	</div>
+	<!-- END PARALLAX -->
 </div>
