--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -1,14 +1,14 @@
 <div class="springs">
-    <h1>How Do Aquifers Recharge&#63;
+    <!-- <h1>How Do Aquifers Recharge&#63;
         <br/>
         <small>The replenishing of aquifers</small>
-    </h1>
-    <div class="centered">
+    </h1> -->
+    <!-- <div class="centered"> -->
     	<!-- <donut-chart></donut-chart>
     	<donut-chart></donut-chart>
     	<donut-chart></donut-chart> -->
-        <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson>
-    </div>
+        <!-- <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson> -->
+    <!-- </div> -->
 
     <!-- Testing directives -->
     <!-- 
@@ -20,4 +20,87 @@
     <tell-time></tell-time> 
     -->
 
+    <!-- START PARALLAX -->
+    <!-- Slide 0 -->
+    <div class="slide" id="springs-slide0" data-slide="0" data-stellar-background-ratio="0.5">
+        <span class="slideno">How Do Aquifers Recharge&#63;</span>   <!-- id="slideno0" -->
+        <a class="button-scroll" data-slide="1" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">The replenishing of aquifers</p>
+        </div>     
+    </div>
+
+    <!-- Slide 1 -->
+    <div class="slide" id="springs-slide1" data-slide="1" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 1</span>     <!-- id="slideno1" -->
+        <a class="button-scroll" data-slide="2" title=""></a>
+        <div class="wrapper">
+            <!-- <p data-stellar-ratio="1.5" alt=""></p> -->
+            <div class="centered">
+                <d3-geojson class="d3map" data-geo="dataSource01"></d3-geojson>
+            </div>
+        </div>     
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="slide" id="springs-slide2" data-slide="2" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 2</span>      <!-- id="slideno2" -->
+        <a class="button-scroll" data-slide="3" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div>    
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="slide" id="springs-slide3" data-slide="3" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 3</span>     <!-- id="slideno3" -->
+        <a class="button-scroll" data-slide="4" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div>
+    </div>
+
+    <!-- Slide 4 -->
+    <div class="slide" id="springs-slide4" data-slide="4" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 4</span>    <!--  id="slideno4"  -->                   
+        <a class="button-scroll" data-slide="5" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div>   
+    </div>
+
+    <!-- Slide 5 -->
+    <div class="slide" id="springs-slide5" data-slide="5" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 5</span>      <!-- id="slideno5"    --> 
+        <a class="button-scroll" data-slide="6" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div>  
+    </div>
+
+    <!-- Slide 6 -->
+    <div class="slide" id="springs-slide6" data-slide="6" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 6</span>           <!-- id="slideno6"  -->             
+        <a class="button-scroll" data-slide="7" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div> 
+    </div>
+
+    <!-- Slide 7 -->
+    <div class="slide" id="springs-slide7" data-slide="7" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 7</span>     <!-- id="slideno7" -->                   
+        <a class="button-scroll" id="reverse" data-slide="0" title=""></a>
+        <div class="wrapper">
+            <p data-stellar-ratio="1.5" alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+        </div>
+    </div>
+
+    <!-- Slide 8 -->
+    <div class="slide" id="springs-slide8" data-slide="8" data-stellar-background-ratio="0.5">
+        <span class="slideno">Slide 8</span>                  
+        <div class="wrapper">
+        </div> 
+    </div>
+    <!-- END PARALLAX -->
 </div>
