--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -1,84 +1,81 @@
 <div class="caveskarsts">
-    <!-- <h1>What Are Caves &amp; Karsts&#63;<br/><small>The structure of aquifers</small></h1> -->
-
-    <!-- START PARALLAX -->
 	<!-- Slide 0 -->
-	<div class="slide" id="ck-slide0" data-slide="0" data-stellar-background-ratio="0.5">
-		<span class="slideno">Seco Sinkhole</span>   <!-- id="slideno0" -->
-	    <a class="button-scroll" data-slide="1" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">The Edwards Aquifer — one of the most prolific karst aquifers in the United States — is located right here in south central Texas.  Come on in and discover the features that make this aquifer one of the most porous and permeable aquifers around.</p>
+	<div data-parallax-background class="slide" id="ck-slide0" data-slide="0" data-parallax-ratio="0.5">
+		<span class="slideno">Seco Sinkhole</span>
+    <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <!-- <p data-parallax data-parallax-ratio="1.0" parallax-vertical-offset="300" alt=""></p> -->
+      <p alt="">The Edwards Aquifer — one of the most prolific karst aquifers in the United States — is located right here in south central Texas.  Come on in and discover the features that make this aquifer one of the most porous and permeable aquifers around.</p>
 		</div>     
 	</div>
 
 	<!-- Slide 1 -->
-	<div class="slide" id="ck-slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		<span class="slideno">Waterflow</span>     <!-- id="slideno1" -->
-	    <a class="button-scroll" data-slide="2" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">Over millions of years water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>
+	<div data-parallax-background class="slide" id="ck-slide1" data-slide="1" data-parallax-ratio="0.5">
+		<span class="slideno">Waterflow</span>
+    <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">Over millions of years water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>
 		</div>      
 	</div>
 
 	<!-- Slide 2 -->
-	<div class="slide" id="ck-slide2" data-slide="2" data-stellar-background-ratio="0.5">
-		<span class="slideno">Location</span>      <!-- id="slideno2" -->
-	    <a class="button-scroll" data-slide="3" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.</p>
+	<div data-parallax-background class="slide" id="ck-slide2" data-slide="2" data-parallax-ratio="0.5">
+		<span class="slideno">Location</span>
+    <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.</p>
 		</div>     
 	</div>
 
 	<!-- Slide 3 -->
-	<div class="slide" id="ck-slide3" data-slide="3" data-stellar-background-ratio="0.5">
-		<span class="slideno">Drainage</span>     <!-- id="slideno3" -->
-	    <a class="button-scroll" data-slide="4" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
+	<div data-parallax-background class="slide" id="ck-slide3" data-slide="3" data-parallax-ratio="0.5">
+		<span class="slideno">Drainage</span>
+    <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
 		</div>
 	</div>
 
 	<!-- Slide 4 -->
-	<div class="slide" id="ck-slide4" data-slide="4" data-stellar-background-ratio="0.5">
-		<span class="slideno">Limestone</span>    <!--  id="slideno4"  -->                   
-	    <a class="button-scroll" data-slide="5" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">As the rainwater mixes with organic compounds in the soil, it forms a diluted weak acid called carbonic acid.  Over millions of years this acid has dissolved out some of the calcite minerals that make up the Edwards Aquifer, leaving interconnected pores and cavities, and in some cases large cave systems.</p>
+	<div data-parallax-background class="slide" id="ck-slide4" data-slide="4" data-parallax-ratio="0.5">
+		<span class="slideno">Limestone</span>                  
+    <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">As the rainwater mixes with organic compounds in the soil, it forms a diluted weak acid called carbonic acid.  Over millions of years this acid has dissolved out some of the calcite minerals that make up the Edwards Aquifer, leaving interconnected pores and cavities, and in some cases large cave systems.</p>
 		</div>     
 	</div>
 
 	<!-- Slide 5 -->
-	<div class="slide" id="ck-slide5" data-slide="5" data-stellar-background-ratio="0.5">
-		<span class="slideno">Sinkhole</span>      <!-- id="slideno5"    --> 
-	    <a class="button-scroll" data-slide="6" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
+	<div data-parallax-background class="slide" id="ck-slide5" data-slide="5" data-parallax-ratio="0.5">
+	<span class="slideno">Sinkhole</span>
+    <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
 		</div>   
 	</div>
 
 	<!-- Slide 6 -->
-	<div class="slide" id="ck-slide6" data-slide="6" data-stellar-background-ratio="0.5">
-		<span class="slideno">Descent</span>           <!-- id="slideno6"  -->             
-	    <a class="button-scroll" data-slide="7" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
+	<div data-parallax-background class="slide" id="ck-slide6" data-slide="6" data-parallax-ratio="0.5">
+		<span class="slideno">Descent</span>            
+    <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
 		</div>  
 	</div>
 
 	<!-- Slide 7 -->
-	<div class="slide" id="ck-slide7" data-slide="7" data-stellar-background-ratio="0.5">
-		<span class="slideno">Watertable</span>     <!-- id="slideno7" -->                   
-	    <a class="button-scroll" id="reverse" data-slide="0" title=""></a>
-	    <div class="wrapper">
-            <p data-stellar-ratio="1.5" alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
+	<div data-parallax-background class="slide" id="ck-slide7" data-slide="7" data-parallax-ratio="0.5">
+		<span class="slideno">Watertable</span>                
+    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
 		</div> 
 	</div>
 
 	<!-- Slide 8 -->
-	<div class="slide" id="ck-slide8" data-slide="8" data-stellar-background-ratio="0.5">
+	<div data-parallax-background class="slide" id="ck-slide8" data-slide="8" data-parallax-ratio="0.5">
 		<span class="slideno">End</span>                  
-	    <div class="wrapper">
+    <div class="wrapper">
 		</div> 
 	</div>
-	<!-- END PARALLAX -->
 </div>
